2010-10-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Fixed a jquery typo
	for iexplorer browser

2010-10-19  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_io.php: fixed the function "safe_input" when the
	parameter is a array.

2010-10-18  Sancho Lerena <slerena@artica.es>
	
	* pandoradb.sql: Alter some trecon_task info to avoid problems on new
	custom script items (due the referencial integrity).
	
	* pandoradb_data.sql: Octopods instead octopus.
	
	* godmode/menu.php,
	* godmode/servers/recon_script.php: Added new option to manage recon scripts
	
	* godmode/servers/manage_recontask.php,
	godmode/servers/manage_recontask_form.php: Changes to manage the new recon
	tasks using custom-defined scripts to detect and monitor things (neeed some
	Javascript improvements).
	
2010-10-18  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/insert_data.php: added first version of extension to added
	data in any module in any agent, by form or csv.
	
	Pending tasks: #3063417

2010-10-18  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: Added support for recon scripts.

2010-10-16  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control: Removed apache and apache php mod from deps, giving
	user chance to use another HTTP server.

    * pandoradb_migrate_v3.1_to_v3.2.sql: Variable for SQL custom reports has
    more size now (custom SQL reports could be huge SQL sentences).

    * godmode/reporting/reporting_builder.php, 
    godmode/reporting/reporting_builder.item_editor.php: Added suppor for the 
    new SQL graph reports (vbar, hbar and pie).

    * include/fgraph.php: Support for new SQL graphs, with new function 
    graph_custom_sql_graph().

    * include/functions_reporting.php:  Support for new SQL graphs.

    * operation/reporting/reporting_xml.php: Fixed some problems and added
    support for graphs using session_id.

2010-10-15  Ramon Novoa  <rnovoa@artica.es>
