@@ -2977,6 +2977,24 @@ echo __('Hello, %s!', $user);
 function __ ($string /*, variable arguments */) {
 	global $l10n;
 	
+	$extensions = get_extensions();
+	
+	global $config;
+	
+	if ($config['enterprise_installed']) {
+		if (isset($config['translate_string_extension_installed']) && $config['translate_string_extension_installed'] == 1) {
+			if (array_key_exists('translate_string.php', $extensions)) {
+				enterprise_include_once('extensions/translate_string/functions.php');
+				
+				$tranlateString = get_defined_translation($string);
+				
+				if ($tranlateString !== false) {
+					return $tranlateString;
+				}
+			}
+		}
+	}
+	
 	if ($string == '') {
 		return $string;
 	}
